4.9 Fixed some notifications UI, Score bonus, Time Bonus, Random Even pop up Added RandomEvents: BlackOut (blacks out half of gamplay grid for 7s), TemporarySpeed (increase speed to 19ms for 7s), Reversed controls (inverts left and right for 7s). All random invents happen after 2mins with gaps between them shomwhere between 10s to 50s gaps.

--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -200,3 +200,12 @@
     -fx-alignment: center;
     -fx-padding: 6px;
 }
+
+.popupStyle {
+    -fx-font-size: 20px;
+    -fx-font-weight: bold;
+    -fx-background-color: rgba(0,0,0,0.75);
+    -fx-padding: 10px 18px;
+    -fx-background-radius: 8px;
+    -fx-border-radius: 8px;
+}
